# firstuwp-rs

./: .gitignore  AppxManifest.template.xml  AppxManifest.xml  Cargo.toml  LICENSE.txt  README.md  Xargo.toml  appxmapping.debug.ini  appxmapping.template.ini  build.rs
Assets/: logo.psd
app/: Cargo.toml  build.rs
app/src/: abi.rs  app.rs  interop.rs  main.rs  main_page.rs  twir_entry.rs  weak_ref.rs  xaml_metadata_provider.rs  xaml_system_base_type.rs  xaml_user_type.rs
bindings/: Cargo.toml
bindings/src/: lib.rs
src/: abi.rs  app.rs  interop.rs  main.rs  main_page.rs  xaml_metadata_provider.rs  xaml_system_base_type.rs  xaml_user_type.rs
xaml/: MainPage.xaml  MainPage.xbf  README.md
