[package]
name = "app"
version = "0.1.0"
authors = ["bdbai <bdbaiapp@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindings = { path = "../bindings" }
winrt = "0.7.2"

[dependencies]
bindings = { path = "../bindings" }
winrt = "0.7.2"
